--- a/tonix/boot/Makefile
+++ b/tonix/boot/Makefile
@@ -1,6 +1,6 @@
 
 
 loader:
-    nasm -f elf -o loaderasm.o loader.asm
-    gcc -o loader.o -c loader.c
-    ld ¨CT linker.ld  -o kernel.bin loader.o loaderasm.o 
+	nasm -f elf -o loaderasm.o loader.asm
+	gcc -m32 -o loader.o -c loader.c -fno-stack-protector
+	ld -T linker.ld  -o kernel.bin loader.o loaderasm.o -m elf_i386
